# Server/src/openapi.rs
@@ -35,6 +35,9 @@ impl Modify for SecurityAddon {
         auth::verify_token_handler,
         player::create_player_handler,
         player::get_me_handler,
+        player::list_owned_pachimon_handler,
+        player::set_party_handler,
+        player::update_pachimon_move_handler,
         chat::send_message_handler,
         chat::poll_messages_handler,
         scout::list_banners_handler,
@@ -48,6 +51,15 @@ impl Modify for SecurityAddon {
         device::AuthenticateDeviceResponse,
         player::CreatePlayerRequest,
         player::PlayerResponse,
+        player::PlayerPachimonMoveDto,
+        player::PlayerPachimonDto,
+        player::ListOwnedPachimonResponse,
+        player::PartySlotRequest,
+        player::SetPartyRequest,
+        player::PartySlotDto,
+        player::SetPartyResponse,
+        player::UpdateMoveRequest,
+        player::UpdateMoveResponse,
         chat::SendMessageRequest,
         chat::SendMessageResponse,
         chat::MessageDto,
